src/components/Select/select.scss
@mixin listPosition {
  position: absolute;
  left: 0;
  top: calc(100% + 10px);
  z-index: 4;
}

.sb-select {
  position: relative;
  display: inline-flex;
  flex-direction: column;
  width: 100%;

  &:focus-within .sb-select-inner {
    @include focusedTextField;
  }

  // modifiers
  &--inline {
    width: auto;

    .sb-select-inner {
      border: 0;

      &__label {
        margin-right: 5px;
        color: $sb-dark-blue-50;
      }

      &__chevron {
        color: $light-gray;
      }

      &__input {
        width: auto;
      }
    }

    .sb-select-list {
      position: absolute;
      top: 0;
    }

    &:hover,
    &:focus {
      .sb-select-inner__input::placeholder {
        color: $sb-dark-blue;
        opacity: 1;
      }
    }
  }

  &[aria-expanded='true'] {
    .sb-select-list {
      display: block;
    }

    .sb-minibrowser {
      display: block;
    }

    .sb-select-inner {
      @include focusedTextField;
    }
  }

  .sb-minibrowser {
    @include listPosition();

    display: none;
  }

  &--loading .sb-select-inner__chevron {
    color: $sb-green;
  }
}

.sb-select__message {
  display: block;
  margin-top: 5px;
  font-size: 1.4rem;
  font-weight: normal;
  letter-spacing: 0;
}

.sb-select__message--error {
  color: $red;
}

.sb-select-inner {
  display: flex;
  flex: 1;
  align-items: center;
  overflow-x: hidden;
  padding: 10px 10px 9px 17px;
  color: $sb-dark-blue;
  font-size: $font-14;
  background-color: $white;
  border: 1px solid $light;
  border-radius: 5px;
  cursor: pointer;

  &:hover {
    border-color: $sb-green;
  }

  &:focus {
    @include focusedTextField;
  }

  .sb-tag {
    margin: 4px;

    .sb-avatar,
    .sb-avatar__image,
    .sb-avatar img,
    .sb-avatar__initials {
      width: 20px;
      height: 20px;
    }

    .sb-avatar {
      margin-right: 8px;
    }

    .sb-avatar__initials {
      font-size: 0.7em;
    }
  }

  // elements
  &__icon-left {
    margin-right: 10px;
  }

  &__icons {
    margin-left: auto;
  }

  &__tags {
    display: flex;
    flex: 1;
    flex-wrap: wrap;
    margin: -4px 0 -4px -4px;
  }

  &__tags &__input {
    margin-left: 4px;
  }

  &__clear {
    padding: 0;
    color: $light-gray;
    background-color: transparent;
    border: 0;
    border-radius: 50%;
    cursor: pointer;
    appearance: none;
  }

  &__input {
    flex: 1;
    width: 100%;
    padding: 0;
    color: $sb-dark-blue;
    font-size: inherit;
    background-color: transparent;
    border: 0;
    outline: none;

    &:read-only {
      cursor: pointer;
    }

    &::placeholder {
      color: $sb-dark-blue-50;
    }
  }

  &__value {
    position: absolute;
    overflow: hidden;
    box-sizing: border-box;
    max-width: calc(100% - 60px);
    line-height: normal;
    text-overflow: ellipsis;
    white-space: nowrap;

    &-icon-left {
      max-width: calc(100% - 80px);
      margin-left: 35px;
    }
  }

  &__avatar {
    margin: -1px 10px -1px 0;
  }

  &__chevron,
  &:hover &__chevron {
    color: $sb-dark-blue;
  }

  &__disabled {
    background: $light-25;
    cursor: not-allowed !important;

    .sb-select-inner__input {
      background: $light-25;
      pointer-events: none;
    }

    &:focus,
    &:hover {
      border-color: $light;
      box-shadow: none;
      outline: none;
    }
  }
}

.sb-select-inner--error,
.sb-select-inner--error:hover {
  border: 1px solid $red;
}

.sb-select[aria-expanded='true'] .sb-select-inner--error,
.sb-select:focus-within .sb-select-inner--error {
  border-color: $red;
  box-shadow: 0 0 0 3px rgb(255 179 176 / 30%);
  outline: none;
}

.sb-select__input--hidden {
  position: absolute;
  top: 48px;
  height: 0;
  border: 0;
  opacity: 0;
}

.sb-select-list {
  @include popoverComponent();
  @include listPosition();

  display: none;
  flex: 1;
  overflow: auto;
  box-sizing: border-box;
  width: 100%;
  max-height: 235px;
  min-width: 176px;
  padding: 13px 0;
  background-color: $white;

  ul {
    margin: 0;
    padding: 0;
    list-style: none;
  }

  &__item,
  &__create {
    display: flex;
    align-items: center;
    box-sizing: border-box;
    width: 100%;
    margin: 0;
    padding: 10px 17px;
    font-size: $font-14;
    text-align: left;
    border: 0;
    cursor: pointer;
    appearance: none;

    &--focused {
      background-color: $light-50;
      outline: none;
    }

    &--selected span {
      @include selectedItem;
    }
  }

  &__item-name,
  &__create {
    min-height: 17px;
    color: $sb-dark-blue;
  }

  &__create-label {
    margin-right: 5px;
    color: $sb-green;
  }

  &__empty {
    display: block;
    color: $sb-dark-blue-50;
    font-size: 1.3rem;
    text-align: center;
  }
}

.sb-select-list__item--with-path {
  flex-flow: column;
  align-items: flex-start;
}

.sb-select-list__item-caption {
  display: block;
  margin-top: 2px;
  color: $light-gray;
  font-size: $font-12;
}

.sb-select--inline .sb-select-list--above,
.sb-select-list--above {
  bottom: calc(100% + 10px);
  top: unset;
}

